# task-helper

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.rs  types.ts
src-tauri/: Cargo.toml  db.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  commands.rs  commands_ai.rs  commands_files.rs  config.rs  db.rs  lib.rs  main.rs
src/components/: AddTaskForm.tsx  AiTaskInput.tsx  AttachmentSection.tsx  BreakdownPanel.tsx  NavBar.tsx  SettingsModal.tsx  TaskCard.tsx  WeeklyReportModal.tsx
src/pages/: Home.tsx  TaskDetail.tsx  Timeline.tsx  WeeklyReport.tsx
